Solve 04-flex-information using nested flex components and flex-wrap
Introduce containers to nest elements and create nested flex layouts
Use both column and row flex-directions, max-width and flex-wrap
to create required look

Better implementation than what was suggested
though sol'n used less lines

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -12,6 +12,28 @@ img {
   font-weight: 900;
 }
 
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.plants{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 52px;
+  margin-top: 32px;
+}
+
+.plant{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+  flex: 0 1 auto;
+  text-align: center;
+}
+
 /* do not edit this footer */
 .footer {
   position: fixed;
